--- a/render.yaml
+++ b/render.yaml
@@ -1,15 +1,15 @@
 services:
-  - type: pserv
+  - type: web
     runtime: image
     name: alpine-chrome
     image:
       url: docker.io/zenika/alpine-chrome:latest
 
   - type: web
-    name: gaugin
+    name: gauguin
     env: go
     region: oregon
     buildCommand: ./render-build.sh
-    startCommand: ./gaugin
+    startCommand: ./gauguin
     healthCheckPath: /
     envVars:
