set a health check path

--- a/gauguin.yaml
+++ b/gauguin.yaml
@@ -6,7 +6,7 @@ routes:
       - imgUrl
     size: 1200x630
     template: ./templates/frame.tmpl
-  # - path: /frames/opengraph
+  - path: /
   #   params:
   #     - text
   #   size: 1200x630
